# MatchboxTradingStack

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: clang-tidy.yml
src/apps/: CMakeLists.txt
src/apps/udp_md_gateway/: CMakeLists.txt  UdpGateway.cpp  UdpGateway.hpp  main.cpp
src/apps/udp_md_gateway/config/: UdpGateway.cfg
src/apps/udp_md_replay_feed/: CMakeLists.txt  UdpReplayFeed.cpp  UdpReplayFeed.hpp  main.cpp
src/apps/udp_md_replay_feed/config/: UdpReplayFeed.cfg
src/apps/udp_md_replay_feed/data/: condition.json
